crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_049_SuperHIK4in1_Super_HIK_4_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-049-SuperHIK4in1/Super HIK 4-in-1 [p1][!].zip
rom_sha256=b571ab8c732fc9f29e523b172160bbda0957dca58e11ae8ef9108bfb70a62816
frames=1141
fb_bytes=245760
cycles=33949778
audio_samples=836505
audio_fnv1a64=d816cb1636976377
checkpoint f900 fb_fnv1a64=8f7deb6d93c033b9
checkpoint f1100 fb_fnv1a64=833442ac9f019e20
