crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_050_m50_Super_Mario_Bros_Alt_Levels_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-050-m50/Super Mario Bros. (Alt Levels) [p1][!].nes
rom_sha256=4a423e9fe007c7c6a38d419fa6e94009d612efb1ce015b549ba3135dc69146c7
frames=1141
fb_bytes=245760
cycles=551855
audio_samples=13580
audio_fnv1a64=010b082c6590e1a2
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=1719dca5cef7a325
