crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_051_BallGames11in1_11_in_1_Ball_Games_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-051-BallGames11in1/11-in-1 Ball Games [p1][!].zip
rom_sha256=e96a7fbbae622191c0243e1ec6f2b76b0c7f80d1f2275ab00b9d95a3c2cb13c5
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=9b347ca7ed24b247
checkpoint f900 fb_fnv1a64=b9336a13dcf7a325
checkpoint f1100 fb_fnv1a64=b9336a13dcf7a325
