crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_052_MarioParty7in1_2_in_1_1996_Super_HIK_Gold_Card_NT_803_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-052-MarioParty7in1/2-in-1 - 1996 Super HIK Gold Card (NT-803) [p1][!].zip
rom_sha256=ec26a60865f6419fd9c069b98a94791999603ed619d7410b4f2380ec2f21c80c
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=7be6dea4a0320dba
checkpoint f900 fb_fnv1a64=5b305cccc4e6a55f
checkpoint f1100 fb_fnv1a64=5b305cccc4e6a55f
